Сверстанная шапака и почти сверстанный левый сайдбар.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,155 @@
     </head>
     <body>
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browserupgrade">Ваш браузер устарел. Обновите браузер для корректного просмотра сайта.</p>
         <![endif]-->
+        
+        <!-- Шапка -->
+        <header class="header clearfix">
+            <div class="container940">
+                <div class="logo-wrapper">
+                   <a href="" class="logo__link">
+                       <img src="img/logo.png" alt="" class="logo__img">
+                   </a> 
+                </div>
+                <div class="info-wrapper">
+                    <nav class="top-menu">
+                        <ul class="top___menu__list"> 
+                            <li class="top__menu__element">
+                                <a href="" class="top__menu__link">Главная</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="top__menu__element">
+                                <a href="" class="top__menu__link">О компании</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="top__menu__element">
+                                <a href="" class="top__menu__link">Документация</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="top__menu__element">
+                                <a href="" class="top__menu__link">Новости</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="top__menu__element">
+                                <a href="" class="top__menu__link">Калькуляторы</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="top__menu__element">
+                                <a href="" class="top__menu__link">Фотогалерея</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="top__menu__element">
+                                <a href="" class="top__menu__link">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="header-phone">
+                        <div class="phone__number">
+                            +7 (351) 240-10-28
+                        </div>
+                    </div>
+                    <div class="header-nav-buttons">
+                        <a href="" class="orange__btn">
+                            Онлайн-заявка
+                        </a>
+                        <a href="" class="orange__btn">
+                            Скачать прайс
+                        </a>
+                        <a href="" class="orange__btn no--margin">
+                            Заказать звонок
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main class="main-contaier clearfix container940">
+            <div class="left-sidebar">
+                <div class="left-menu-wrapper">
+                    <h2 class="title">Каталог</h2> 
+                    <div class="menu-area">
+                        <ul class="left-menu-list">
+                            <li class="left-menu__item orange"><a href="" class="left__menu__link">Трубы стальные общего
+                        назначения</a></li>
+                            <li class="left-menu__item"><a href="" class="left__menu__link">Трубы специального 
+                        назначения</a></li>
+                            <li class="left-menu__item"><a href="" class="left__menu__link">Отводы
+                        </a></li>
+                            <li class="left-menu__item"><a href="" class="left__menu__link">Тройники</a></li>
+                            <li class="left-menu__item"><a href="" class="left__menu__link">Заглушки</a></li>
+                            <li class="left-menu__item"><a href="" class="left__menu__link">Днища</a></li>
+                            <li class="left-menu__item"><a href="" class="left__menu__link">Переходы</a></li>
+                            <li class="left-menu__item"><a href="" class="left__menu__link">Трубы нержавеющие</a></li>
+                            <li class="left-menu__item"><a href="" class="left__menu__link">Каталоги заводов</a></li>
+                        </ul>
+                    </div>   
+                </div>
+                <div class="calculators-wrapper">
+                    <h2 class="title grey--title">Калькуляторы</h2>
+                    <div class="calculators-item">
+                        <a href="" class="calculstor__link">Расчет массы трубы</a>
+                    </div>
+                    <div class="calculators-item">
+                        <a href="" class="calculstor__link">Нормы загрузки в вагон</a>
+                    </div>
+                    <div class="calculators-item">
+                        <a href="" class="calculstor__link">Масса металлопроката</a>
+                    </div>
+                </div>
+                <div class="news-wrapper">
+                    <h2 class="title grey--title">Новости</h2>
+                    <div class="news-item">
+                        <div class="news-info">
+                            <div class="news-photo-wrapper">
+                                <img src="img/news-photo.jpg" alt="" class="news__photo">
+                            </div>
+                            <div class="news__date">01.10.2013</div>
+                        </div>
+                        <a href="" class="news__title__link">
+                            В.Путин дал старт строительству Амурского газоперерабатывающего завода (ГПЗ).
+                        </a>
+                    </div>
+                    <div class="news-item">
+                        <div class="news-info">
+                            <div class="news-photo-wrapper">
+                                <img src="img/news-photo.jpg" alt="" class="news__photo">
+                            </div>
+                            <div class="news__date">01.10.2013</div>
+                        </div>
+                        <a href="" class="news__title__link">
+                            В.Путин дал старт строительству Амурского газоперерабатывающего завода (ГПЗ).
+                        </a>
+                    </div>
+                    <div class="news-item">
+                        <div class="news-info">
+                            <div class="news-photo-wrapper">
+                                <img src="img/news-photo.jpg" alt="" class="news__photo">
+                            </div>
+                            <div class="news__date">01.10.2013</div>
+                        </div>
+                        <a href="" class="news__title__link">
+                            В.Путин дал старт строительству Амурского газоперерабатывающего завода (ГПЗ).
+                        </a>
+                    </div>
+                    <a href="" class="more__link">Читать все новости >></a>
+                </div>
+                <div class="contaсts-wrapper">
+                    <h2 class="title grey--title">Контакты</h2>
+                    <p class="text">
+                        Тел./Факс: +7(351)240-10-28<br>
+                        Эл. почта: mctitan74@yandex.ru<br>
+                        454091, г. Челябинск, <br>
+                        Пр. Ленина, 55А, офис 706 (7 эт.)
+                    </p>
+                </div>
+            </div>
+            <div class="right-content-area">
+                Контент
+            </div>
+        </main>
+        <!-- Конец шапка -->
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
+        <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
