--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                    </a> 
                 </div>
                 <div class="info-wrapper">
+                    <!-- Верхнее меню -->
                     <nav class="top-menu">
                         <ul class="top___menu__list"> 
                             <li class="top__menu__element">
@@ -57,6 +58,8 @@
                             </li>
                         </ul>
                     </nav>
+                    <!-- Конец верхнего меню -->
+                    <!-- Информация, телефоны -->
                     <div class="header-phone">
                         <div class="phone__number">
                             +7 (351) 240-10-28
@@ -73,11 +76,15 @@
                             Заказать звонок
                         </a>
                     </div>
+                    <!-- Конец Информации и телефонов -->
                 </div>
             </div>
         </header>
+        <!-- Конец шапка -->
         <main class="main-contaier clearfix container940">
+            <!-- Левый сайдбар -->
             <div class="left-sidebar">
+                <!-- Левое меню -->
                 <div class="left-menu-wrapper">
                     <h2 class="title">Каталог</h2> 
                     <div class="menu-area">
@@ -97,6 +104,8 @@
                         </ul>
                     </div>   
                 </div>
+                <!-- Конец левого меню -->
+                <!-- Калькуляторы -->
                 <div class="calculators-wrapper">
                     <h2 class="title grey--title">Калькуляторы</h2>
                     <div class="calculators-item">
@@ -109,6 +118,8 @@
                         <a href="" class="calculstor__link">Масса металлопроката</a>
                     </div>
                 </div>
+                <!-- Конец калькуляторов -->
+                <!-- Новости -->
                 <div class="news-wrapper">
                     <h2 class="title grey--title">Новости</h2>
                     <div class="news-item">
@@ -146,21 +157,52 @@
                     </div>
                     <a href="" class="more__link">Читать все новости >></a>
                 </div>
-                <div class="contaсts-wrapper">
+                <!-- Конец новостей -->
+                <!-- Контакты -->
+                <div class="contacts-wrapper">
                     <h2 class="title grey--title">Контакты</h2>
                     <p class="text">
                         Тел./Факс: +7(351)240-10-28<br>
                         Эл. почта: mctitan74@yandex.ru<br>
                         454091, г. Челябинск, <br>
-                        Пр. Ленина, 55А, офис 706 (7 эт.)
+                        Пр. Ленина, 55А, офис 706 (7 эт.)<br>
                     </p>
+                    <div class="yandex-map">
+                        <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=BgmKH4rxWVcX7utz2O7b7tjN0wuAS7te&width=100%&height=240&lang=ru_RU&sourceType=constructor"></script>
+                    </div>
+                </div>
+                <!-- Конец контактов -->
+            </div>
+            <!-- Конец левого сайдбара -->
+            <div class="right-content-area">
+                <!-- Баннер -->
+                <div class="content-banner">
+                    <img src="img/banner.jpg" alt="" class="banner__img">
+                </div>
+                <!-- Конец баннера -->
+                <!-- Хлебные крошки и поиск -->
+                <div class="breadcrumbs-and-search clearfix">
+                    <!-- Хлебные крошки -->
+                    <div class="breadcrumbs">
+                        <ul class="breadcrumbs-list">
+                            <li class="breadcrumbs__item"><a href="" class="breadcrumbs__link">Главная</a></li>
+                            <li class="breadcrumbs__item separator">&rarr;</li>
+                            <li class="breadcrumbs__item">Каталог</li>
+                        </ul>
+                    </div>
+                    <!-- Конец Хлебных крошек -->
+                    <!-- Поиск -->
+                    <div class="search">
+                        <form action="" class="search-form">
+                            <div class="search-field-wrapper">
+                                <input type="text" class="search__field" placeholder="Поиск">
+                            </div>
+                        </form>
+                    </div>
+                    <!-- Конец поиска -->
                 </div>
             </div>
-            <div class="right-content-area">
-                Контент
-            </div>
         </main>
-        <!-- Конец шапка -->
 
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="js/main.js"></script>
