--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                 <!-- Конец контактов -->
             </div>
             <!-- Конец левого сайдбара -->
+            <!-- Правая контентная область -->
             <div class="right-content-area">
                 <!-- Баннер -->
                 <div class="content-banner">
@@ -201,7 +202,67 @@
                     </div>
                     <!-- Конец поиска -->
                 </div>
+                <!-- Конец хлебных крошек и поиска -->
+                <!-- Разделы товаров на главной -->
+                <div class="goods clearfix">
+                    <div class="goods-item">
+                       <div class="item-photo">
+                           <a href="" class="item__photo__link"><img src="img/good-item-photo.jpg" alt="" class="item__img"></a>
+                       </div>
+                       <a href="" class="item__title__link">Трубы стальные</a> 
+                    </div>
+                    <div class="goods-item">
+                       <div class="item-photo">
+                           <a href="" class="item__photo__link"><img src="img/good-item-photo.jpg" alt="" class="item__img"></a>
+                       </div>
+                       <a href="" class="item__title__link">Трубы стальные</a> 
+                    </div>
+                    <div class="goods-item">
+                       <div class="item-photo">
+                           <a href="" class="item__photo__link"><img src="img/good-item-photo.jpg" alt="" class="item__img"></a>
+                       </div>
+                       <a href="" class="item__title__link">Трубы стальные</a> 
+                    </div>
+                    <div class="goods-item">
+                       <div class="item-photo">
+                           <a href="" class="item__photo__link"><img src="img/good-item-photo.jpg" alt="" class="item__img"></a>
+                       </div>
+                       <a href="" class="item__title__link">Трубы стальные</a> 
+                    </div>
+                    <div class="goods-item">
+                       <div class="item-photo">
+                           <a href="" class="item__photo__link"><img src="img/good-item-photo.jpg" alt="" class="item__img"></a>
+                       </div>
+                       <a href="" class="item__title__link">Трубы стальные</a> 
+                    </div>
+                    <div class="goods-item">
+                       <div class="item-photo">
+                           <a href="" class="item__photo__link"><img src="img/good-item-photo.jpg" alt="" class="item__img"></a>
+                       </div>
+                       <a href="" class="item__title__link">Трубы стальные</a> 
+                    </div>
+                    <div class="goods-item">
+                       <div class="item-photo">
+                           <a href="" class="item__photo__link"><img src="img/good-item-photo.jpg" alt="" class="item__img"></a>
+                       </div>
+                       <a href="" class="item__title__link">Трубы стальные</a> 
+                    </div>
+                    <div class="goods-item">
+                       <div class="item-photo">
+                           <a href="" class="item__photo__link"><img src="img/good-item-photo.jpg" alt="" class="item__img"></a>
+                       </div>
+                       <a href="" class="item__title__link">Трубы стальные</a> 
+                    </div>
+                    <div class="goods-item">
+                       <div class="item-photo">
+                           <a href="" class="item__photo__link"><img src="img/good-item-photo.jpg" alt="" class="item__img"></a>
+                       </div>
+                       <a href="" class="item__title__link">Трубы стальные</a> 
+                    </div>
+                </div>
+                <!-- Конец разделов товаров -->
             </div>
+            <!-- Конец правой области -->
         </main>
 
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
