--- a/index.html
+++ b/index.html
@@ -261,6 +261,50 @@
                     </div>
                 </div>
                 <!-- Конец разделов товаров -->
+                <!-- Начало преимущества -->
+                <div class="advantages clearfix">
+                    <div class="advantages-title">
+                        Преимущества
+                    </div>
+                    <div class="advantages-content clearfix">
+                        <div class="advantages-item">
+                            <img src="img/advantages-1.png" alt="" class="advantages__img">
+                            <div class="item__title">
+                                Клиентоориентированость
+                            </div>
+                            <p class="item__text">
+                                Индивидуальный подход к каждому клиенту, теплая и уютная атмосфера сотрудничества.
+                            </p>
+                        </div>
+                        <div class="advantages-item">
+                            <img src="img/advantages-2.png" alt="" class="advantages__img">
+                            <div class="item__title">
+                                Оперативность поставок
+                            </div>
+                            <p class="item__text">
+                                Отлаженная работа сотрудников компании и логистика минимизируют время поставки металлопроката на склад покупателя.
+                            </p>
+                        </div>
+                        <div class="advantages-item">
+                            <img src="img/advantages-3.png" alt="" class="advantages__img">
+                            <div class="item__title">
+                                Качество и низкие цены
+                            </div>
+                            <p class="item__text">
+                                Только качественная продукция Российский и Китайских металлургических заводов.
+                                Приемлимые цены и система скидок.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Конец преимущества -->
+                <h2>Заголовок</h2>
+                <p>
+                    Трубы сварные и бесшовные – один из видов металлопроката, который всегда пользуется высоким спросом. Объемы его потребления различными отраслями, особенно строительной и нефтехимической с каждым годом только увеличиваются. Трубы используются везде: от прокладки газо и нефтепроводов до создания систем отопления и водоснабжения в жилых домах.
+                </p>
+                <p>
+                    В настоящее время производители Китая предлагают самый широкий ассортимент труб – любые диаметры (от миллиметров до метров), любые сечения (круглые, овальные, квадратные, прямоугольные и др.), любые материалы (сталь, нержавеющая сталь, сплавы и т.д.), сварные трубы, бесшовные – все эти позиции  производятся в Китае.
+                </p>
             </div>
             <!-- Конец правой области -->
         </main>
