--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                     </div>
                 </div>
                 <!-- Конец преимущества -->
+                <!-- Заголовок текст -->
                 <h2>Заголовок</h2>
                 <p>
                     Трубы сварные и бесшовные – один из видов металлопроката, который всегда пользуется высоким спросом. Объемы его потребления различными отраслями, особенно строительной и нефтехимической с каждым годом только увеличиваются. Трубы используются везде: от прокладки газо и нефтепроводов до создания систем отопления и водоснабжения в жилых домах.
@@ -305,10 +306,82 @@
                 <p>
                     В настоящее время производители Китая предлагают самый широкий ассортимент труб – любые диаметры (от миллиметров до метров), любые сечения (круглые, овальные, квадратные, прямоугольные и др.), любые материалы (сталь, нержавеющая сталь, сплавы и т.д.), сварные трубы, бесшовные – все эти позиции  производятся в Китае.
                 </p>
+                <!-- Конец заголовок текст -->
             </div>
             <!-- Конец правой области -->
         </main>
-
+        <!-- Форма -->
+        <div class="big-form clearfix">
+            <div class="container940">
+                <div class="bf-content">
+                    <div class="left-contacts">
+                        <h2>Звоните 8 (351) 240-10-28</h2>
+                        <p>
+                            Мы работаем с понедельника по пятницу:<br>
+                            9:00 - 18:00 - по Челябинску<br>
+                            07:00 - 16:00 - по Москве
+                        </p>
+                        <div class="contacts-person clearfix">
+                            <div class="contact-photo">
+                                <img src="img/person-photo.png" alt="" class="person__photo">
+                            </div>
+                            <div class="contact-info">
+                                <div class="person__name">Иванов Иван</div>
+                                <div class="person__post">Менеджер</div>
+                                <div class="person__email">
+                                e-mail:<br>
+                                    <a href="mailto:mctitan74@yandex.ru">mctitan74@yandex.ru</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contacts-person clearfix">
+                            <div class="contact-photo">
+                                <img src="img/person-photo.png" alt="" class="person__photo">
+                            </div>
+                            <div class="contact-info">
+                                <div class="person__name">Иванов Иван</div>
+                                <div class="person__post">Менеджер</div>
+                                <div class="person__email">
+                                e-mail:<br>
+                                    <a href="mailto:mctitan74@yandex.ru">mctitan74@yandex.ru</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contacts-person clearfix">
+                            <div class="contact-photo">
+                                <img src="img/person-photo.png" alt="" class="person__photo">
+                            </div>
+                            <div class="contact-info">
+                                <div class="person__name">Иванов Иван</div>
+                                <div class="person__post">Менеджер</div>
+                                <div class="person__email">
+                                e-mail:<br>
+                                    <a href="mailto:mctitan74@yandex.ru">mctitan74@yandex.ru</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-form">
+                        <h2>Оставьте заявку онлайн</h2>
+                        <p>Специалист свяжется с Вами в ближайшее время.</p>
+                        <form action="">
+                            <input type="text" class="name__field text__field" placeholder="Имя*" required>
+                            <input type="email" class="email__field text__field" placeholder="E-mail">
+                            <br>
+                            <input type="tel" class="phone__field text__field" placeholder="Телефон*" required>
+                            <button class="get__req__btn">Заявка/ Реквизиты**</button>
+                            <textarea name="" id="" class="comments__area text__area" placeholder="Комментарий"></textarea>
+                            <p>
+                                * Поля обязательные для заполнения<br>
+                                ** Прикрепите заявку и свои реквизиты - и мы сразу сможем выставить Вам счет. Размер файла не более 5 Mb.
+                            </p>
+                            <button class="send__form__btn orange__btn">Отправить</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Конец Форма -->
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="js/main.js"></script>
     </body>
