--- a/index.html
+++ b/index.html
@@ -382,6 +382,63 @@
             </div>
         </div>
         <!-- Конец Форма -->
+        <!-- Футер -->
+        <footer class="footer clearfix">
+            <div class="container940">
+                <div class="footer-logo">
+                    <a href="" class="logo__link">
+                       <img src="img/logo.png" alt="" class="logo__img">
+                    </a>
+                    <div class="copyright">
+                        © ООО "Металлоцентр Титан"
+                    </div>
+                </div>
+                <div class="footer-info">
+                    <!-- Нижнее меню -->
+                    <nav class="bottom-menu">
+                        <ul class="bottom___menu__list"> 
+                            <li class="bottom__menu__element">
+                                <a href="" class="bottom__menu__link">Главная</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="bottom__menu__element">
+                                <a href="" class="bottom__menu__link">О компании</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="bottom__menu__element">
+                                <a href="" class="bottom__menu__link">Документация</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="bottom__menu__element">
+                                <a href="" class="bottom__menu__link">Новости</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="bottom__menu__element">
+                                <a href="" class="bottom__menu__link">Калькуляторы</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="bottom__menu__element">
+                                <a href="" class="bottom__menu__link">Фотогалерея</a>
+                            </li>
+                            <li class="menu__separator">|</li>
+                            <li class="bottom__menu__element">
+                                <a href="" class="bottom__menu__link">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!-- Конец нижнего меню -->
+                    <div class="info-block">
+                        Тел./Факс: +7(351)240-10-28<br>
+                        Эл. почта: mctitan74@yandex.ru<br>
+                        454091, г. Челябинск,gПр. Ленина, 55А, офис 706 (7 этаж)
+                    </div>
+                    <div class="developer">
+                        Разработка сайта: «Дабл Ю». Информация о проекте
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Конец футер -->
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="js/main.js"></script>
     </body>
