Главная сделана полностью

--- a/index.html
+++ b/index.html
@@ -430,15 +430,16 @@
                     <div class="info-block">
                         Тел./Факс: +7(351)240-10-28<br>
                         Эл. почта: mctitan74@yandex.ru<br>
-                        454091, г. Челябинск,gПр. Ленина, 55А, офис 706 (7 этаж)
+                        454091, г. Челябинск, Пр. Ленина, 55А, офис 706 (7 этаж)
                     </div>
                     <div class="developer">
-                        Разработка сайта: «Дабл Ю». Информация о проекте
+                        <a href="">Разработка сайта: «Дабл Ю»</a>. <a href="">Информация о проекте</a>
                     </div>
                 </div>
             </div>
         </footer>
         <!-- Конец футер -->
+        <a href="#0" class="cd-top"></a>
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="js/main.js"></script>
     </body>
