--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <a style="color: #000;" href="news.html" target="_blank">Страница новостей</a><br>
             <a style="color: #000;" href="news-page.html" target="_blank">Страница новости</a><br>
             <a style="color: #000;" href="text-page.html" target="_blank">Текстовая страница</a><br>
+            <a style="color: #000;" href="catalog.html" target="_blank">Каталог</a><br>
         </div>
         
         <!-- Конец футер -->
