Страница кулькулятора сделана

--- a/calculators.html
+++ b/calculators.html
@@ -205,223 +205,42 @@
                 </div>
                 <!-- Конец хлебных крошек и поиска -->
                 <h1>Заглушки: Эллиптические, Фланцевые</h1>
-                <!-- Каталог товаров -->
-                <div class="catalog-items clearfix">
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
+                <!-- Страница калькуляторов -->
+                <div class="calculators">
+                    <div id="tabs">
+                      <ul>
+                        <li><a href="#tabs-1">Расчет массы трубы</a></li>
+                        <li><a href="#tabs-2">Нормы загрузки в вагон</a></li>
+                        <li><a href="#tabs-3">Масса металлопроката</a></li>
+                      </ul>
+                      <div id="tabs-1">
+                        <div class="download-calc clearfix">
+                            <img style="float: left; margin-right: 20px;" src="img/for-tab.jpg" alt="" class="">
+                            <p style="margin-top: 0px;">
+                                Калькулятор для расчета массы труб позволяет расчитывать массу:<br>
+                                круглых труб, прямоугольных труб, квадратных труб.
+                            </p>
+                            <a href="" class="download__btn">Скачать</a>
                         </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
-                    <div class="catalog-item">
-                        <div class="item-photo">
-                            <a href="" class="item__link">
-                                <img src="img/catalog-item-photo.png" alt="" class="item__img">
-                            </a>
-                        </div> 
-                        <div class="item__title">
-                            <a href="" class="item__link">Заглушка</a>
-                        </div>
-                        <div class="item__gost">
-                            ГОСТ 17379-2001
-                        </div>
-                        <div class="item__price">
-                            Цена: 1200 руб.
-                        </div>
-                        <a href="" class="item__btn__order">Заказать</a>
-                    </div>
+                        <p>
+                            Версия 2.0.4.0. дата 06.03.2003, размер файла 200 kB - упакован в Zip.<br>
+                            Программа не требует инсталляции.<br>
+                            Пользователь вводит тип трубы, материал, наружный диаметр (или размеры сторон для прямоугольных), толщину стенки.<br>
+                            В списке материалов - основные металлы используемые для изготовления труб - углеродистая сталь, нержавеющие стали (20 марок), <br>дюралюминий, титан, медь и др. материалы.<br>
+                            Нержавеющие стали расписаны по маркам (12Х18Н10Т, 12Х18Н12Т и др.)<br>
+                            Расчетная масса трубы с размерами по ГОСТу точно соответствует значениям по ГОСТ 8732, ГОСТ 8734, ГОСТ 8639, ГОСТ 8645.
+                        </p>
+                      </div>
+                      <div id="tabs-2">
+                        <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
+                      </div>
+                      <div id="tabs-3">
+                        <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
+                        <p>Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.</p>
+                      </div>
+                    </div>    
                 </div>
-                <!-- Конец каталога товаров -->
-                <!-- Заголовок текст -->
-                <h2>Заголовок</h2>
-                <p>
-                    Трубы сварные и бесшовные – один из видов металлопроката, который всегда пользуется высоким спросом. Объемы его потребления различными отраслями, особенно строительной и нефтехимической с каждым годом только увеличиваются. Трубы используются везде: от прокладки газо и нефтепроводов до создания систем отопления и водоснабжения в жилых домах.
-                </p>
-                <p>
-                    В настоящее время производители Китая предлагают самый широкий ассортимент труб – любые диаметры (от миллиметров до метров), любые сечения (круглые, овальные, квадратные, прямоугольные и др.), любые материалы (сталь, нержавеющая сталь, сплавы и т.д.), сварные трубы, бесшовные – все эти позиции  производятся в Китае.
-                </p>
-                <!-- Конец заголовок текст -->
+                <!-- Конец страницы калькуляторов -->
                 <!-- Начало преимущества -->
                 <div class="advantages clearfix">
                     <div class="advantages-title">
