Внесены корректировки по внутренним страницам

--- a/news-page.html
+++ b/news-page.html
@@ -204,7 +204,7 @@
                 </div>
                 <!-- Конец хлебных крошек и поиска -->
                 <h1>Заголовок h1</h1>
-                <img src="img/map.jpg" style="float: left; margin-right: 20px;" alt="">
+                <img src="img/map.jpg" style="float: left; margin-right: 20px; box-shadow: 1px 2px 2px 0 rgba(0,0,0,.4); border-radius: 5px;" alt="">
                 <p>
                     ООО «МеталлоЦентр Титан» - Основным направлением компании является оптовая продажа стальных труб. Мы поставляем продукцию: труба водогазопроводная, электросварная, горячедеформированная, холоднодеформированная. Отгрузки производятся со складов в г. Челябинске, г. Екатеринбурге или с завода производителя, на удобных для клиента условиях.
                 </p>
