--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <a style="color: #000;" href="news-page.html" target="_blank">Страница новости</a><br>
             <a style="color: #000;" href="text-page.html" target="_blank">Текстовая страница</a><br>
             <a style="color: #000;" href="catalog.html" target="_blank">Каталог</a><br>
+            <a style="color: #000;" href="calculators.html" target="_blank">Калькулятор</a><br>
         </div>
         
         <!-- Конец футер -->
