--- a/text-page.html
+++ b/text-page.html
@@ -204,7 +204,7 @@
                 </div>
                 <!-- Конец хлебных крошек и поиска -->
                 <h1>Заголовок h1</h1>
-                <img src="img/map.jpg" style="float: left; margin-right: 20px;" alt="">
+                <img src="img/map.jpg" style="float: left; margin-right: 20px; box-shadow: 1px 2px 2px 0 rgba(0,0,0,.4); border-radius: 5px;" alt="">
                 <p>
                     ООО «МеталлоЦентр Титан» - Основным направлением компании является оптовая продажа стальных труб. Мы поставляем продукцию: труба водогазопроводная, электросварная, горячедеформированная, холоднодеформированная. Отгрузки производятся со складов в г. Челябинске, г. Екатеринбурге или с завода производителя, на удобных для клиента условиях.
                 </p>
@@ -220,7 +220,9 @@
                         <span style="color: #ef7d1a;">Качество и приемлемые цены:</span> компания «МеталлоЦентр Титан» предлагает только качественную продукцию произведенную Российскими и Китайскими металлургическими заводами, в сочетании с приемлимыми ценами и системой скидок, дает Вам право считать выбор нашей компании оптимальным. 
                     </li>
                 </ul>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/qIlK7u8UmE4" frameborder="0" allowfullscreen></iframe>
+                <div class="youtube-video-wrapper" style="box-shadow: 1px 2px 2px 0 rgba(0,0,0,.4); border-radius: 5px; overflow: hidden; width: 560px;">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qIlK7u8UmE4" frameborder="0" allowfullscreen></iframe>
+                </div>
                 <h3>Заголовок h3</h3>
                 <table>
                   <tr>
